# geoflow

./: .gitmodules  CMakeLists.txt  ComputeSharedHeadersHash.cmake  README.md  app.cpp  app.h  app_povi.h  geoflow-app.cpp  geoflow-config.cmake  geoflow-config.cmake.in  main.cpp  shader.cpp  shader.h
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  release.yml
apps/: CMakeLists.txt  add.json  geof.cpp  geoflow-app.cpp  geoflow-cli.cpp  geoflow-config.json  geoflow-gui.cpp  gf.cpp
apps/resources/: AppIcon.icns  appicon.rc
cmake/: ComputeSharedHeadersHash.cmake  apple-llvm7.cmake  geoflow-config.cmake.in  geoflow_create_plugin.cmake  gf_plugin.cpp.in  version.h
examples/: CMakeLists.txt  basic.cpp  basic.gf.json  basic_dynamic.cpp  basic_nodes.hpp  basic_plugin.cpp  gui.cpp  povi_nodes.hpp
examples/Arithmetic/: CMakeLists.txt  demo_dynamic.cpp  demo_simple.cpp  dylib.cpp  nodes.hpp  plugin.cpp
gf/: CMakeLists.txt
gf/examples/: basic.cpp  basic_nodes.hpp  gui.cpp
gf/src/: geoflow.hpp  nodes.h
installer/: CMakeLists.txt
pv/shaders/: crosshair.frag
pv/src/: app.cpp  app_povi.h  gloo.cpp  main.cpp
resources/: AppIcon.afdesign  AppIcon.icns  Info.plist
shaders/: basic.vert  crosshair.vert
src/: app.cpp  app.h  app_povi.cpp  app_povi.h  common.hpp  geoflow.cpp  geoflow.hpp  gloo.cpp  gloo.h  main.cpp  math_example.cpp  nodes.cpp  nodes.h  povi_nodes.hpp
src/DLLoader/: IDLLoader.h
src/DLLoader/Unix/: DLLoader.h
src/DLLoader/Windows/: DLLoader.h
src/flowchart/: geoflow.cpp  geoflow.hpp  imgui_color_gradient.cpp  nodes.cpp  nodes.h  povi_nodes.hpp
src/geoflow/: AttributeCalcNode.cpp  ExpressionComputer.cpp  ExpressionComputer.hpp  api.cpp  api.hpp  common.cpp  common.hpp  core_nodes.hpp  geoflow.cpp  geoflow.hpp  parameters.cpp  parameters.hpp  plugin_manager.hpp  projHelper.cpp  projHelper.hpp
src/geoflow/core/: geoflow.cpp  geoflow.hpp
src/geoflow/gui/: ImNodes.cpp  ImNodes.h  ImNodesEz.cpp  ImNodesEz.h  flowchart.cpp  flowchart.hpp  gfImNodes.hpp  imgui_color_gradient.cpp  imgui_color_gradient.h  nodes.cpp  nodes.h  osdialog.cpp  osdialog.hpp  parameter_widgets.cpp  parameter_widgets.hpp  povi_nodes.hpp
src/viewer/: app.cpp  app.h  app_povi.cpp  app_povi.h  box.hpp  gloo.cpp  gloo.h  main.cpp
src/viewer/shaders/: basic.frag  basic.vert  crosshair.frag  crosshair.vert
